--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
     "lint-staged": "^13.2.1",
+    "sass": "^1.62.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
@@ -45,6 +46,7 @@
     "axios": "^1.3.6",
     "next": "^13.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   }
 }
