--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "@next/next/no-img-element": "off",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error"
   }
