--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,8 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "outDir": "dist",
-    "rootDirs": [
-      "src",
-      "tests"
-    ],
+    "rootDirs": [ "src", "tests"],
     "target": "es2021",
     "module": "esnext",
     "moduleResolution": "node",
@@ -24,29 +17,12 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "@/*": [
-        "*"
-      ],
-      "@/tests/*": [
-        "../tests/*"
-      ]
-    },
+    "plugins": [{ "name": "next" } ],
+    "paths": { "@/*": ["*"], "@/tests/*": ["../tests/*"]},
     "noEmit": true,
     "incremental": true,
     "isolatedModules": true
   },
-  "include": [
-    "src",
-    "tests",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src","tests",".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
