--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/axios": "^0.14.0",
@@ -34,12 +35,13 @@
     "faker": "5.5.3",
     "git-commit-msg-linter": "^4.9.4",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^13.2.1",
     "sass": "^1.62.0",
-    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
