feat: ensure SignUp go to login page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "@next/next/no-img-element": "off",
     "react-hooks/exhaustive-deps": "off",
     "react/jsx-uses-react": "error",
