--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm t -- --watch",
     "test:staged": "npm t -- --findRelatedTests",
@@ -25,6 +25,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -46,6 +47,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
