--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-  "extends": ["standard-with-typescript", "next/core-web-vitals"],
+  "extends": ["standard-with-typescript", "next/core-web-vitals", "plugin:cypress/recommended"],
   "parserOptions": { "project": "./tsconfig-eslint.json" },
-  "plugins": ["react"],
+  "env": { "cypress/globals": true },
+  "plugins": ["react", "cypress"],
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
@@ -9,7 +10,6 @@
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/prefer-nullish-coalescing": "off",
     "@typescript-eslint/no-floating-promises": "off",
-    "@typescript-eslint/no-var-requires": "off",
     "@next/next/no-img-element": "off",
     "react-hooks/exhaustive-deps": "off",
     "react/jsx-uses-react": "error",
