--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:watch": "npm t -- --watch",
     "test:staged": "npm t -- --findRelatedTests",
     "test:coverage": "npm t -- --coverage",
+    "test:cypress": "cypress open",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.4",
+    "@cypress/webpack-preprocessor": "^5.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/axios": "^0.14.0",
@@ -26,9 +28,11 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "cross-env": "^7.0.3",
+    "cypress": "^12.11.0",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
@@ -43,6 +47,7 @@
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^13.2.1",
     "sass": "^1.62.0",
+    "ts-loader": "^9.4.2",
     "typescript": "^5.0.4"
   },
   "dependencies": {
