--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-floating-promises": "off",
     "@next/next/no-img-element": "off",
     "react-hooks/exhaustive-deps": "off",
