--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-modal": "^3.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "cross-env": "^7.0.3",
     "cypress": "^12.11.0",
@@ -58,6 +59,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "reactstrap": "^9.1.9"
   }
 }
