--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-localstorage-mock": "^2.4.26",
+    "jest-location-mock": "^1.0.9",
     "jest-mock-extended": "^3.0.4",
     "jest-transform-stub": "^2.0.0",
     "lint-staged": "^13.2.1",
